update stable version for bit(1)

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -17,5 +17,8 @@ postgresDriver = org.postgresql.Driver
 # in case the folder doesn't exist, the folder are created. 
 postgresFolderCSVEXPORT = C:\\Program Files (x86)\\PostgreSQL\\DataFromMysql
 
-#table will not truncate and update.
-TableUpdateAvoid = test1,test2 
+# table will not truncate and update.
+tableUpdateAvoid = test1,test2
+
+# truncate in cascade all table in postgres database, truncate if and only if the value is true.
+needToTruncatePostgres = false;
