--- a/configDefault.properties
+++ b/configDefault.properties
@@ -23,7 +23,7 @@ postgresFolderCSVEXPORT = C:\\Program Files (x86)\\PostgreSQL\\DataFromMysql
 # data should be inserted
 mysqlDumpPath = C:\\Users\\DUPE_ARN\\Documents\\dumps\\Dumps Junit\\Dump2-0.sql 
 # dump of the database before insert data.
-mysqlDumpToSave = C:\\Users\\DUPE_ARN\\Documents\\dumps\\Dumps Junit\\Dump2-0-UPDATE-03-07-2016.sql
+mysqlDumpToSave = C:\\Users\\DUPE_ARN\\Documents\\dumps\\Dumps Junit\\Dump2-0-CONTEXT-19-08-2016.sql
 # dump of the database before insert data.
 postgresToSaveRepo = C:\\Program Files (x86)\\PostgreSQL\\9.5\\data\\DumpSaveByProgram
 
@@ -40,13 +40,18 @@ loadIntoMysql = false
 loadIntoPostgres = false
 
 # Restore the database with dump referencing by postgresToSaveRepo,mysqlDumpToSave
-restorePostgresDatabase = false
+restorePostgresDatabase = true
 restoreMysqlDatabase = false
 
 #Make csv file from mysql database, be careful delete old values.
 makeCsvFileFromMysql = false
 
+#update sequence.
+UpdateSequencePostgres = false
+
+#indicate if the table should be dropped and created
 dropAndCreate = false
+
 # table will not truncate and update into postgres
 tableUpdateAvoid = test1,test2
 
